homepage package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://n-is-k.github.io/side-pattern-land/",
+  "homepage": "https://sidepattern.com",
   "name": "newsletter",
   "version": "0.1.0",
   "private": true,
