mod package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://sidepattern.com",
+  "homepage": "https://www.sidepattern.com",
   "name": "newsletter",
   "version": "0.1.0",
   "private": true,
